--- a/Project-Map/Project-Map.vcxproj
+++ b/Project-Map/Project-Map.vcxproj
@@ -115,6 +115,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\Entry.h" />
+    <ClInclude Include="..\Node.h" />
+    <ClInclude Include="..\SearchTree.h" />
+    <ClInclude Include="..\Tree.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\Entry.cpp" />
+    <ClCompile Include="..\main.cpp" />
+    <ClCompile Include="..\Node.cpp" />
+    <ClCompile Include="..\SearchTree.cpp" />
+    <ClCompile Include="..\Tree.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
