--- a/Project-Map/Project-Map.vcxproj
+++ b/Project-Map/Project-Map.vcxproj
@@ -19,17 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\tree_node.h" />
-    <ClInclude Include="..\src\search_tree.h" />
-    <ClInclude Include="..\src\binary_tree.h" />
-    <ClInclude Include="src\entry.h" />
+    <ClInclude Include="..\lib\red_black_tree\entry.h" />
+    <ClInclude Include="..\lib\red_black_tree\tree_node.h" />
+    <ClInclude Include="..\lib\red_black_tree\rbtree.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\src\tree_node.cpp" />
-    <ClCompile Include="..\src\search_tree.cpp" />
-    <ClCompile Include="..\src\binary_tree.cpp" />
-    <ClCompile Include="src\entry.cpp" />
+    <ClCompile Include="..\lib\red_black_tree\tree_node.cpp" />
+    <ClCompile Include="..\lib\red_black_tree\tree.cpp" />
+    <ClCompile Include="..\lib\red_black_tree\entry.cpp" />
+    <ClCompile Include="..\lib\red_black_tree\main.cpp" />
+    <ClCompile Include="..\lib\red_black_tree\red_black_tree.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
