--- a/Project-Map/Project-Map.vcxproj.filters
+++ b/Project-Map/Project-Map.vcxproj.filters
@@ -14,33 +14,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\search_tree.h">
+    <ClInclude Include="..\lib\red_black_tree\rbtree.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\binary_tree.h">
+    <ClInclude Include="..\lib\red_black_tree\tree_node.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\tree_node.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="src\entry.h">
+    <ClInclude Include="..\lib\red_black_tree\entry.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\main.cpp">
+    <ClCompile Include="..\lib\red_black_tree\main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\search_tree.cpp">
+    <ClCompile Include="..\lib\red_black_tree\entry.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\binary_tree.cpp">
+    <ClCompile Include="..\lib\red_black_tree\tree_node.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\tree_node.cpp">
+    <ClCompile Include="..\lib\red_black_tree\tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\entry.cpp">
+    <ClCompile Include="..\lib\red_black_tree\red_black_tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
