--- a/Project-Map/Project-Map.vcxproj.filters
+++ b/Project-Map/Project-Map.vcxproj.filters
@@ -34,10 +34,10 @@
     <ClCompile Include="..\lib\red_black_tree\tree_node.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\lib\red_black_tree\tree.cpp">
+    <ClCompile Include="..\lib\red_black_tree\rbtree_tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\lib\red_black_tree\red_black_tree.cpp">
+    <ClCompile Include="..\lib\red_black_tree\rbtree_red_black_tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
