--- a/Project-Map/Project-Map.vcxproj
+++ b/Project-Map/Project-Map.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\red_black_tree\entry.h" />
+    <ClInclude Include="..\lib\red_black_tree\helpers.h" />
     <ClInclude Include="..\lib\red_black_tree\tree_node.h" />
     <ClInclude Include="..\lib\red_black_tree\rbtree.h" />
   </ItemGroup>
