--- a/Project-Map/Project-Map.vcxproj
+++ b/Project-Map/Project-Map.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\lib\iterators.h" />
     <ClInclude Include="..\lib\red_black_tree\helpers.h" />
     <ClInclude Include="..\lib\red_black_tree\tree_node.h" />
     <ClInclude Include="..\lib\red_black_tree\rbtree.h" />
