--- a/Project-Map/Project-Map.vcxproj.filters
+++ b/Project-Map/Project-Map.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="..\lib\simple_map.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\lib\entry.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\test\test_map.cpp">
