--- a/Project-Map/Project-Map.vcxproj
+++ b/Project-Map/Project-Map.vcxproj
@@ -25,10 +25,10 @@
     <ClInclude Include="..\lib\simple_map.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\test\test_map.cpp" />
+    <None Include="..\README.md" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\README.md" />
+    <ClCompile Include="..\test\test_rbtree.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
